skeleton is done, needs driver and logic touch up

--- a/Project_05_MR_V1.0/Project_05_MR_V1.0/Project_05_MR_V1.0.vcxproj
+++ b/Project_05_MR_V1.0/Project_05_MR_V1.0/Project_05_MR_V1.0.vcxproj
@@ -67,6 +67,7 @@
     <ClInclude Include="Hash.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Hash.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
