--- a/Project_05_MR_V1.0/Project_05_MR_V1.0/Project_05_MR_V1.0.vcxproj.filters
+++ b/Project_05_MR_V1.0/Project_05_MR_V1.0/Project_05_MR_V1.0.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Hash.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
