--- a/Project_05_MR_V1.0/Project_05_MR_V1.0/Project_05_MR_V1.0.vcxproj.filters
+++ b/Project_05_MR_V1.0/Project_05_MR_V1.0/Project_05_MR_V1.0.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="Hash.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="QHash.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Hash.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="QHash.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
